# libcm

./: .gitignore  LICENSE  Makefile.am  README.md  cmApBuf.c  cmApBuf.h  cmArray.c  cmArray.h  cmAudDsp.c  cmAudDsp.h  cmAudDspIF.c  cmAudDspIF.h  cmAudDspLocal.c  cmAudDspLocal.h  cmAudLabelFile.c  cmAudLabelFile.h  cmAudioAggDev.c  cmAudioAggDev.h  cmAudioBuf.c  cmAudioBuf.h  cmAudioFile.c  cmAudioFile.h  cmAudioFileDev.c  cmAudioFileDev.h  cmAudioFileMgr.h  cmAudioNrtDev.c  cmAudioNrtDev.h  cmAudioPort.c  cmAudioPort.h  cmAudioPortFile.c  cmAudioPortFile.h  cmAudioSys.c  cmAudioSys.h  cmAudioSysMsg.h  cmComplexTypes.c  cmComplexTypes.h  cmCsv.c  cmCsv.h  cmCtx.c  cmCtx.h  (+132 more)
app/: cmDspPgmJsonToDot.c  cmDspPgmJsonToDot.h  cmMidiScoreFollow.c  cmMidiScoreFollow.h  cmOnset.c  cmOnset.h  cmPickup.c  cmPickup.h  cmScore.c  cmScore.h  cmScoreMatchGraphic.c  cmScoreMatchGraphic.css  cmScoreMatchGraphic.h  cmScoreProc.c  cmScoreProc.h  cmSdb.c  cmSdb.h  cmTakeSeqBldr.c  cmTakeSeqBldr.h  cmTimeLine.c  cmTimeLine.h  cmXScore.c  cmXScore.h
doc/: cdg_cfg.json  cdg_code.css  cdg_code_prefix.html  cdg_div_cod.css  cdg_ext_anch.json  gen_doc.sh  libcm.pd
doc/libcm/: cdg_edoc.pd  cmApBuf_c_0.html  cmAudioBuf_h_0.html  cmAudioFileDev_h_0.html  cmData_h_0.html  cmDspBuiltIn_h_0.html  cmDspKr_c_0.html  cmDspKr_h_0.html  cmDspPgmKrTimeLineLiteAf_c_0.html  cmDspSys_h_0.html  cmFeatFile_h_0.html  cmGrPlotAudio_h_0.html  cmJson_c_0.html  cmMidi_h_0.html  cmPgmOpts_h_0.html  cmProc5_h_0.html  cmRpt_h_0.html  cmRtSys_h_0.html  cmSvgWriter_h_0.html  cmSymTbl_h_0.html  cmText_h_0.html  cmVirtNet_h_0.html
docs/: _config.yml  cdg_anchors.json  cdg_cfg.json  cdg_code.css  cmAudDspLocal_h_0.html  cmAudDsp_h_0.html  cmAudioFileMgr_h_0.html  cmAudioFile_h_0.html  cmAudioPortFile_h_0.html  cmAudioPort_h_0.html  cmAudioSysMsg_h_0.html  cmAudioSys_h_0.html  cmDListTpl_h_0.html  cmDspBuiltIn_c_0.html  cmDspCtx_h_0.html  cmDspFx_c_0.html  cmDspPgmKrChain_h_0.html  cmDspPgmKrTksb_c_0.html  cmDspPgmKr_c_0.html  cmDspPgmKr_h_0.html  cmDspPgmPPMain_h_0.html  cmDspPgm_h_0.html  cmDspUi_h_0.html  cmGnuPlot_h_0.html  cmHashTbl_h_0.html  cmJson_h_0.html  cmLib_h_0.html  cmMallocDebug_h_0.html  cmMidiFilePlay_h_0.html  cmMidiFile_h_0.html  cmMidiScoreFollow_h_0.html  cmOnset_h_0.html  cmProc2_h_0.html  cmProc4_h_0.html  cmSerialize_c_0.html  cmSyncRecd_h_0.html  cmTagFile_h_0.html  cmThread_h_0.html  cmUdpNet_h_0.html  cmUdpPort_h_0.html  (+5 more)
docs/_posts/: 2025-05-29-welcome-to-jekyll.markdown
docs/_site/: 404.html  cdg_code.css  cdg_div_cod.css  cdg_edoc.css  cmApBuf_h_0.html  cmArray_h_0.html  cmAudDspIF_h_0.html  cmAudLabelFile_h_0.html  cmAudioAggDev_h_0.html  cmAudioNrtDev_h_0.html  cmAudioSys_c_0.html  cmComplexTypes_h_0.html  cmCsv_h_0.html  cmCtx_h_0.html  cmDList_h_0.html  cmDevCfg_h_0.html  cmDspClass_h_0.html  cmDspFx_h_0.html  cmDspNet_h_0.html  cmDspPgmJsonToDot_h_0.html  cmDspPgmKrTimeLineLite_c_0.html  cmDspPgmPP_h_0.html  cmDspPgm_c_0.html  cmDspPreset_h_0.html  cmDspStore_h_0.html  cmDspValue_h_0.html  cmErr_h_0.html  cmExec_h_0.html  cmFileSys_c_0.html  cmFileSys_h_0.html  cmFile_h_0.html  cmFloatTypes_h_0.html  cmFrameFile_h_0.html  cmGlobal_h_0.html  cmGrDevCtx_h_0.html  cmGrPage_h_0.html  cmGrPlot_h_0.html  cmGr_h_0.html  cmKeyboard_h_0.html  cmLex_c_0.html  (+41 more)
dsp/: cmDspBuiltIn.c  cmDspBuiltIn.h  cmDspClass.c  cmDspClass.h  cmDspCtx.h  cmDspFx.c  cmDspFx.h  cmDspKr.c  cmDspKr.h  cmDspNet.c  cmDspNet.h  cmDspPgm.c  cmDspPgm.h  cmDspPgmKr.c  cmDspPgmKr.h  cmDspPgmKrChain.c  cmDspPgmKrChain.h  cmDspPgmKrChain2.c  cmDspPgmKrTimeLineLite.c  cmDspPgmKrTksb.c  cmDspPgmPP.c  cmDspPgmPP.h  cmDspPgmPPMain.c  cmDspPgmPPMain.h  cmDspPreset.c  cmDspPreset.h  cmDspStore.c  cmDspStore.h  cmDspSys.c  cmDspSys.h  cmDspTl.c  cmDspTl.h  cmDspUi.c  cmDspUi.h  cmDspValue.c  cmDspValue.h
linux/: cmAudioPortAlsa.c  cmFileSysLinux.h  cmMidiAlsa.c
m4/: os_64.m4  os_type.m4
osx/: clock_gettime_stub.c  clock_gettime_stub.h  cmAudioPortOsx.c  cmAudioPortOsx.h  cmFileSysOsx.h  cmMidiOsx.c
sa/: cmSaProc.c
src/: cmApBuf.c  cmApBuf.h  cmArray.c  cmArray.h  cmAudDsp.c  cmAudDsp.h  cmAudDspIF.c  cmAudDspIF.h  cmAudDspLocal.c  cmAudDspLocal.h  cmAudLabelFile.c  cmAudLabelFile.h  cmAudioAggDev.c  cmAudioAggDev.h  cmAudioBuf.c  cmAudioBuf.h  cmAudioFile.c  cmAudioFile.h  cmAudioFileDev.c  cmAudioFileDev.h  cmAudioFileMgr.c  cmAudioFileMgr.h  cmAudioNrtDev.c  cmAudioNrtDev.h  cmAudioPort.c  cmAudioPort.h  cmAudioPortFile.c  cmAudioPortFile.h  cmAudioSys.c  cmAudioSys.h  cmAudioSysMsg.h  cmComplexTypes.c  cmComplexTypes.h  cmCsv.c  cmCsv.h  cmCtx.c  cmCtx.h  cmDList.c  cmDList.h  cmDListTpl.h  (+133 more)
src/app/: cmDspPgmJsonToDot.c  cmDspPgmJsonToDot.h  cmMidiScoreFollow.c  cmMidiScoreFollow.h  cmOnset.c  cmOnset.h  cmPickup.c  cmPickup.h  cmScore.c  cmScore.h  cmScoreMatchGraphic.c  cmScoreMatchGraphic.h  cmScoreProc.c  cmScoreProc.h  cmSdb.c  cmSdb.h  cmTakeSeqBldr.c  cmTakeSeqBldr.h  cmTimeLine.c  cmTimeLine.h  cmXScore.c  cmXScore.h
src/dsp/: cmDspBuiltIn.c  cmDspBuiltIn.h  cmDspClass.c  cmDspClass.h  cmDspCtx.h  cmDspFx.c  cmDspFx.h  cmDspKr.c  cmDspKr.h  cmDspMod.c  cmDspNet.c  cmDspNet.h  cmDspPgm.c  cmDspPgm.h  cmDspPgmKr.c  cmDspPgmKr.h  cmDspPgmKrChain.c  cmDspPgmKrChain.h  cmDspPgmKrChain2.c  cmDspPgmKrTimeLineLite.c  cmDspPgmKrTimeLineLiteAf.c  cmDspPgmKrTksb.c  cmDspPgmPP.c  cmDspPgmPP.h  cmDspPgmPPMain.c  cmDspPgmPPMain.h  cmDspPreset.c  cmDspPreset.h  cmDspStore.c  cmDspStore.h  cmDspSys.c  cmDspSys.h  cmDspUi.c  cmDspUi.h  cmDspValue.c  cmDspValue.h  notes.txt
src/linux/: cmAudioPortAlsa.c  cmAudioPortAlsa.h  cmFileSysLinux.c  cmFileSysLinux.h  cmMidiAlsa.c
src/osx/: cmAudioPortOsx.c  cmAudioPortOsx.h  cmFileSysOsx.c  cmFileSysOsx.h  cmMidiOsx.c
src/sa/: cmSaProc.c  cmSaProc.h
src/vop/: cmProcTemplate.c  cmProcTemplate.h  cmProcTemplateCode.h  cmProcTemplateHdr.h  cmVectOps.c  (+10 more)
vop/: cmProcTemplate.h  cmProcTemplateCode.h  cmProcTemplateHdr.h  cmProcTemplateMain.h  cmVectOps.c  cmVectOps.h  cmVectOpsDoc.h  cmVectOpsRICode.h  cmVectOpsRIHdr.h  cmVectOpsTemplateCode.h  cmVectOpsTemplateHdr.h  cmVectOpsTemplateUndef.h
(+2 files in other folders)
