

cmHDR = 
cmSRC = 

cmHDR += src/cmErr.h src/cmCtx.h src/cmRpt.h src/cmRptFile.h src/cmGlobal.h src/cmComplexTypes.h src/cmFloatTypes.h src/cmPrefix.h
cmSRC += src/cmErr.c src/cmCtx.c src/cmRpt.c src/cmRptFile.c src/cmGlobal.c src/cmComplexTypes.c

cmHDR += src/cmSerialize.h src/cmSymTbl.h src/cmHashTbl.h src/cmFileSys.h src/cmFile.h 
cmSRC += src/cmSerialize.c src/cmSymTbl.c src/cmHashTbl.c src/cmFileSys.c src/cmFile.c 

cmHDR += src/cmMem.h src/cmTime.h src/cmExec.h src/cmPgmOpts.h
cmSRC += src/cmMem.c src/cmTime.c src/cmExec.c src/cmPgmOpts.c

cmHDR += src/cmData.h src/cmLib.h src/cmText.h src/cmTextTemplate.h
cmSRC += src/cmData.c src/cmLib.c src/cmText.c src/cmTextTemplate.c

cmHDR += src/cmMath.h src/cmGnuPlot.h src/cmKeyboard.h  src/cmStrStream.h
cmSRC += src/cmMath.c src/cmGnuPlot.c src/cmKeyboard.c  src/cmStrStream.c

cmHDR += src/cmLinkedHeap.h src/cmMallocDebug.h src/cmLex.h src/cmJson.h src/cmXml.h 
cmSRC += src/cmLinkedHeap.c src/cmMallocDebug.c src/cmLex.c src/cmJson.c src/cmXml.c 

cmHDR += src/cmPrefs.h src/cmStack.h src/cmArray.h src/cmSvgWriter.h
cmSRC += src/cmPrefs.c src/cmStack.c src/cmArray.c src/cmSvgWriter.c

cmHDR += src/cmUdpPort.h src/cmUdpNet.h src/cmVirtNet.h
cmSRC += src/cmUdpPort.c src/cmUdpNet.c src/cmVirtNet.c

cmHDR += src/cmAudioPort.h src/cmApBuf.h src/cmAudioAggDev.h src/cmAudioNrtDev.h src/cmThread.h	
cmSRC += src/cmAudioPort.c src/cmApBuf.c src/cmAudioAggDev.c src/cmAudioNrtDev.c src/cmThread.c

cmHDR += src/cmMidiFilePlay.h src/cmMidiPort.h src/cmMidiFile.h src/cmMidi.h 
cmSRC += src/cmMidiFilePlay.c src/cmMidiPort.c src/cmMidiFile.c src/cmMidi.c 

cmHDR += src/cmSerialPort.h
cmSRC += src/cmSerialPort.c

cmHDR += src/cmAudioFile.h src/cmAudioFileMgr.h src/cmMsgProtocol.h src/cmAudioSys.h src/cmAudioSysMsg.h src/cmAudioPortFile.h src/cmAudioFileDev.h 
cmSRC += src/cmAudioFile.c src/cmAudioFileMgr.c src/cmMsgProtocol.c src/cmAudioSys.c src/cmAudioPortFile.c src/cmAudioFileDev.c

cmHDR += src/cmRtSys.h src/cmRtNet.h src/cmUiRtSysMstr.h src/cmRtSysMsg.h 
cmSRC += src/cmRtSys.c src/cmRtNet.c src/cmUiRtSysMstr.c

cmHDR += src/cmDevCfg.h src/cmUi.h src/cmUiDrvr.h 
cmSRC += src/cmDevCfg.c src/cmUi.c src/cmUiDrvr.c

cmHDR += src/cmFrameFile.h src/cmFeatFile.h src/cmCsv.h src/cmAudLabelFile.h src/cmTagFile.h
cmSRC += src/cmFrameFile.c src/cmFeatFile.c src/cmCsv.c src/cmAudLabelFile.c src/cmTagFile.c

cmSRC += src/cmGr.c src/cmGrDevCtx.c src/cmGrPage.c src/cmGrPlot.c src/cmGrPlotAudio.c
cmHDR += src/cmGr.h src/cmGrDevCtx.h src/cmGrPage.h src/cmGrPlot.h src/cmGrPlotAudio.h

cmHDR +=  src/dsp/cmDspSys.h src/dsp/cmDspClass.h src/dsp/cmDspValue.h src/dsp/cmDspUi.h src/dsp/cmDspPreset.h src/dsp/cmDspNet.h
cmSRC +=  src/dsp/cmDspSys.c src/dsp/cmDspClass.c src/dsp/cmDspValue.c src/dsp/cmDspUi.c src/dsp/cmDspPreset.c src/dsp/cmDspNet.c

cmHDR += src/dsp/cmDspStore.h src/dsp/cmDspBuiltIn.h  src/dsp/cmDspFx.h 
cmSRC += src/dsp/cmDspStore.c src/dsp/cmDspBuiltIn.c  src/dsp/cmDspFx.c 

cmHDR += src/dsp/cmDspPgm.h src/dsp/cmDspPgmPP.h src/dsp/cmDspPgmPPMain.h
cmSRC += src/dsp/cmDspPgm.c src/dsp/cmDspPgmPP.c src/dsp/cmDspPgmPPMain.c

cmHDR +=  src/dsp/cmDspKr.h src/dsp/cmDspPgmKr.h  src/dsp/cmDspPgmKrChain.h  
cmSRC +=  src/dsp/cmDspKr.c src/dsp/cmDspPgmKr.c  src/dsp/cmDspPgmKrChain2.c src/dsp/cmDspPgmKrTksb.c src/dsp/cmDspPgmKrTimeLineLite.c src/dsp/cmDspPgmKrTimeLineLiteAf.c

cmHDR += src/cmAudDsp.h src/cmAudDspIF.h src/cmAudDspLocal.h
cmSRC += src/cmAudDsp.c src/cmAudDspIF.c src/cmAudDspLocal.c

cmHDR += src/vop/cmVectOpsTemplateUndef.h src/vop/cmVectOpsTemplateHdr.h src/vop/cmVectOpsTemplateCode.h src/vop/cmVectOpsTemplateMain.h
cmHDR += src/vop/cmVectOpsRIHdr.h src/vop/cmVectOpsRICode.h 
cmHDR += src/vop/cmProcTemplateUndef.h src/vop/cmProcTemplateHdr.h src/vop/cmProcTemplateCode.h src/vop/cmProcTemplateMain.h
cmHDR += src/vop/cmVectOps.h src/vop/cmProcTemplate.h

cmSRC += src/vop/cmVectOps.c src/vop/cmProcTemplate.c

cmSRC += src/cmDList.c
cmHDR += src/cmDList.h src/cmDListTpl.h

cmHDR += src/cmProcObj.h src/cmProc.h src/cmProc2.h src/cmProc3.h src/cmProc4.h src/cmProc5.h src/cmProcTest.h
cmSRC += src/cmProcObj.c src/cmProc.c src/cmProc2.c src/cmProc3.c src/cmProc4.c src/cmProc5.c src/cmProcTest.c


cmHDR += src/app/cmOnset.h src/app/cmTimeLine.h src/app/cmScore.h src/app/cmScoreProc.h src/app/cmXScore.h src/app/cmScoreMatchGraphic.h
cmSRC += src/app/cmOnset.c src/app/cmTimeLine.c src/app/cmScore.c src/app/cmScoreProc.c src/app/cmXScore.c src/app/cmScoreMatchGraphic.c

cmHDR += src/app/cmMidiScoreFollow.h
cmSRC += src/app/cmMidiScoreFollow.c

cmHDR += src/app/cmSdb.h  src/app/cmTakeSeqBldr.h  src/app/cmDspPgmJsonToDot.h
cmSRC += src/app/cmSdb.c  src/app/cmTakeSeqBldr.c  src/app/cmDspPgmJsonToDot.c

cmHDR += src/app/cmPickup.h src/cmRbm.h src/cmTaskMgr.h  src/cmSyncRecd.h
cmSRC += src/app/cmPickup.c src/cmRbm.c src/cmTaskMgr.c  src/cmSyncRecd.c

cmHDR += src/sa/cmSaProc.h 
cmSRC += src/sa/cmSaProc.c

if INC_SONICART
  cmSRC += src/sa/ss0/surroundstereo.c src/sa/ss1/surroundstereo_1.c
endif

if OS_LINUX
 cmSRC += src/linux/cmFileSysLinux.c  src/linux/cmAudioPortAlsa.c src/linux/cmMidiAlsa.c
 cmHDR += src/linux/cmFileSysLinux.h  src/linux/cmAudioPortAlsa.h
endif

if OS_OSX
  cmSRC += src/osx/cmMidiOsx.c src/osx/cmAudioPortOsx.c src/osx/cmFileSysOsx.c
endif


lib_LTLIBRARIES=
include_HEADERS=
AM_LDFLAGS=

AM_CPPFLAGS = -D _GNU_SOURCE  -I.. -I$(srcdir)/src  -I$(srcdir)/src/dsp  -I$(srcdir)/src/vop  -I$(srcdir)/src/app
AM_CFLAGS   = -Wall -Wno-multichar 
AM_CXXFLAGS = 

# debug/release switches
if DEBUG
  AM_CFLAGS   += -g 
  AM_CXXFLAGS += -g
else
  AM_CFLAGS   += -O3
  AM_CXXFLAGS += -O3
endif

# Linux specific compiler flags
if OS_LINUX
  AM_LDFLAGS += -lasound  # why add this link flag? here's why: https://stackoverflow.com/questions/35480928/alsa-unexpected-results-when-called-from-shared-library
if OS_64
  AM_CFLAGS  += -m64
endif	
endif

# OSX specific compiler flags
if OS_OSX
 AM_CPPFLAGS +=  -I/opt/local/include	# Search macports directory for fftw headers
endif

# include src/Makefile.am
src_libcm_la_SOURCES   = $(cmSRC) $(cmHDR)
include_HEADERS += $(cmHDR)
lib_LTLIBRARIES += src/libcm.la

# See: https://www.gnu.org/savannah-checkouts/gnu/automake/manual/html_node/Clean.html#Clean
# 'distclean-local' is used by automake 'distclean' to perform customized local actions
# ${exec_prefix} is the install prefix given to 'configure' by the user.
# ${srcdir} is the directory of this Makefile and is set by autoconf.
distclean-local:
	rm -rf ${exec_prefix}/src        
	rm -rf ${exec_prefix}/lib        
	rm -rf ${exec_prefix}/include

maintainer-clean-local:
	${srcdir}/config.h.in~

